# SIL

./: CMakeLists.txt  README.md  model.slx
cmake/Modules/: FindMatlab.cmake
include/: controller_base.h  controller_example.h  estimator_base.h  estimator_example.h  path_follower_base.h  path_follower_example.h  path_manager_base.h  path_manager_example.h
include/Eigen/src/Core/: PlainObjectBase.h
include/lib/mathlib/math/: Limits.cpp  Limits.hpp  Matrix.hpp  Quaternion.hpp  Vector.hpp
src/: SIL.cpp
src/lib/: controller_base.cpp  controller_example.cpp  estimator_base.cpp  estimator_example.cpp  path_follower_base.cpp  path_follower_example.cpp  path_manager_base.cpp  path_manager_example.cpp
